@@ -32,6 +32,7 @@ Version 1.3.1+svn:
    * new key for [set_variable], literal=, to avoid variable substitution
    * [effect] can now toggle the zoc
    * new key for [variable], boolean_equals=, to test boolean equality
+   * remove some old backward compatibility support
  * user interface:
    * new sounds for user interface events
  * misceleanous bug fixes
